[Capstone Design 1] Team School Health1st Apple Project. (Prof. 고석주) 2017.11.21. 01:55 Database

--- a/Health1st/Base.lproj/Main.storyboard
+++ b/Health1st/Base.lproj/Main.storyboard
@@ -238,7 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yh7-z2-E5l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-738" y="788"/>
+            <point key="canvasLocation" x="-738.75" y="786.97183098591552"/>
         </scene>
         <!--설정-->
         <scene sceneID="3eV-AZ-6OW">
