--- a/Health1st/Base.lproj/Main.storyboard
+++ b/Health1st/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--환자정보-->
         <scene sceneID="tne-QT-ifu">
@@ -121,7 +126,7 @@
                                                             <color key="titleColor" red="0.0207074862" green="0.42678582669999998" blue="0.94214403629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="act_HelperBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hTQ-fB-qMJ"/>
+                                                            <action selector="act_HelperBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wYY-6o-91Q"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="12" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mti-9v-PA9">
@@ -240,21 +245,65 @@
             </objects>
             <point key="canvasLocation" x="-738.75" y="786.97183098591552"/>
         </scene>
-        <!--설정-->
+        <!--그래프-->
         <scene sceneID="3eV-AZ-6OW">
             <objects>
-                <viewController id="DAR-8M-7q2" sceneMemberID="viewController">
+                <viewController id="DAR-8M-7q2" customClass="ChartViewController" customModule="Health1st" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ESK-pu-DaJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gUn-yl-ziF" customClass="LineChartView" customModule="Charts">
+                                <rect key="frame" x="0.0" y="134" width="320" height="385"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JfH-nl-KEt">
+                                <rect key="frame" x="0.0" y="20" width="320" height="106"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SYL-e7-Ybs">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <items>
+                                            <navigationItem title="생체정보 그래프 화면" id="ukq-yq-Ftm">
+                                                <barButtonItem key="rightBarButtonItem" tag="21" systemItem="camera" id="1pW-Jn-CsS">
+                                                    <connections>
+                                                        <action selector="actPitcure:" destination="DAR-8M-7q2" id="b69-UD-uOE"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                            </navigationItem>
+                                        </items>
+                                    </navigationBar>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PATIENT MEAURE CHART" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haa-sz-vdS">
+                                        <rect key="frame" x="0.0" y="54" width="320" height="21.5"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                        <color key="textColor" red="1" green="0.1857388616" blue="0.57339501380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2x-xo-kEs">
+                                        <rect key="frame" x="0.0" y="85.5" width="320" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="uCy-Qp-rVT" firstAttribute="top" secondItem="JfH-nl-KEt" secondAttribute="bottom" constant="-106" id="iNV-iL-4Vg"/>
+                            <constraint firstItem="JfH-nl-KEt" firstAttribute="width" secondItem="ESK-pu-DaJ" secondAttribute="width" id="uck-SD-Dub"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="uCy-Qp-rVT"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="30" title="설정" image="ic_settings_white.png" id="lgL-Hv-ABw"/>
+                    <tabBarItem key="tabBarItem" tag="30" title="그래프" image="ic_assessment_white.png" id="lgL-Hv-ABw"/>
+                    <connections>
+                        <outlet property="lb_LastTime" destination="f2x-xo-kEs" id="ErQ-EP-fMD"/>
+                        <outlet property="lcv_Meaure" destination="gUn-yl-ziF" id="xPH-Y7-w4p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OUx-LL-Mg7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="172" y="788"/>
+            <point key="canvasLocation" x="170.625" y="786.97183098591552"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7WB-Lj-1NX">
@@ -268,8 +317,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="pio-g6-meT"/>
-                        <segue destination="RNU-vB-TfM" kind="relationship" relationship="viewControllers" id="9mb-sS-cpO"/>
                         <segue destination="DAR-8M-7q2" kind="relationship" relationship="viewControllers" id="7to-GF-p67"/>
+                        <segue destination="RNU-vB-TfM" kind="relationship" relationship="viewControllers" id="9mb-sS-cpO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IfV-0F-Tuj" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -278,6 +327,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_assessment_white.png" width="24" height="24"/>
         <image name="ic_assignment_ind_white.png" width="24" height="24"/>
         <image name="ic_call.png" width="24" height="24"/>
         <image name="ic_cardiogram.png" width="64" height="64"/>
@@ -285,7 +335,6 @@
         <image name="ic_message.png" width="24" height="24"/>
         <image name="ic_o2.png" width="64" height="64"/>
         <image name="ic_place_white.png" width="24" height="24"/>
-        <image name="ic_settings_white.png" width="24" height="24"/>
         <image name="ic_user.png" width="64" height="64"/>
     </resources>
 </document>
